# kmark

./: .gitignore  Cargo.toml  build.bat
certificates/: cert.pem  key.pem
client/: Cargo.toml
client/assets/tiled/: km.tiled-session
client/assets/tiled/tmx/: 01.tmx
client/assets/tiled/tsx/: 001-Grassland01.tsx  008-Snowfield01.tsx  TileA2.tsx
client/src/: main.rs
games/: Cargo.toml
games/src/: lib.rs
games/src/client/: client.rs  mod.rs
games/src/enums/: input.rs  mod.rs  state.rs
games/src/game/: game.rs  mod.rs  tiles.rs  title.rs
games/src/loader/: mod.rs  textures.rs
games/src/protocol/: message.rs  mod.rs  player.rs  protocol.rs
games/src/resource/: mod.rs  network.rs
games/src/server/: mod.rs  server.rs
service/: Cargo.toml
service/src/: configs.rs  lib.rs  main.rs
web/: Cargo.toml
web/src/: configs.rs  main.rs
web/src/api/: mod.rs  users.rs
web/src/model/: mod.rs
