[workspace]
resolver = "2"

members = ["service", "client", "games", "web"]


[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

[profile.dist]
inherits = "release"
lto = "thin"


[patch.crates-io]
bitintr = { git = "https://github.com/finnbear/bitintr", branch = "remove_nightly" }
lightyear = { git = "https://github.com/molixianggu/lightyear.git", branch = "ccc" }
