[package]
name = "games"
version = "0.1.0"
edition = "2021"

[lib]
name = "games"
path = "src/lib.rs"

[features]

default = ["client", "server"]

client = []
server = []

[dependencies]
# 
bevy = { version = "0.13", features = ["jpeg", "mp3"] }
bevy_asset_loader = { version = "0.20" }
# 
lightyear = { version = "0.10", features = ["webtransport", "websocket"] }
derive_more = { version = "0.99", features = ["add", "mul"] }
serde = { version = "1.0.196", features = ["derive"] }

anyhow = "1.0.80"
