[package]
name = "service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "service"
path = "src/main.rs"

[dependencies]

bevy = { version = "0.13", default-features = false, features = [
    "bevy_asset",
    "bevy_core_pipeline",
] }
async-compat = "0.2.3"
# 
games = { path = "../games", default-features = false, features = ["server"] }
